--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     
     <title></title>
-    <link rel="canonical" href="http://tofs.me/">
+    <link rel="canonical" href="http://localhost:1313/">
     	<style>
 		html,body,form,div,p{
 			margin:0;
@@ -62,5 +62,15 @@ Docker allows two processes run on the same computer with their own virtual oper
 </section>
 
 </body> 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-63855240-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
 
