--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     
     <title></title>
-    <link rel="canonical" href="http://localhost:1313/">
+    <link rel="canonical" href="http://tofs.me/">
     	<style>
 		html,body,form,div,p{
 			margin:0;
