--- a/tech/angular-factory-vs-service-vs-provider/index.html
+++ b/tech/angular-factory-vs-service-vs-provider/index.html
@@ -44,21 +44,23 @@
 
 <h2 id="factory:87649f85a912b186731bf188b3af2166">Factory</h2>
 
-<pre><code>* You provide a function;
-* When used Angular will run the function and **return your function returned value**;
-</code></pre>
+<ul>
+<li>You provide a function;</li>
 
-<h2 id="service:87649f85a912b186731bf188b3af2166">Service</h2>
+<li><p>When used Angular will run the function and <strong>return your function returned value</strong>;</p>
 
-<pre><code>* You provide a function; 
-* When used Angular will **return new yourFunction()** 
-</code></pre>
+<h2 id="service:87649f85a912b186731bf188b3af2166">Service</h2></li>
 
-<h2 id="provider:87649f85a912b186731bf188b3af2166">Provider</h2>
+<li><p>You provide a function;</p></li>
 
-<pre><code>* You provide a function;
-* Same as service, but you could access it in module config(); 
-</code></pre>
+<li><p>When used Angular will <strong>return new yourFunction()</strong>;</p>
+
+<h2 id="provider:87649f85a912b186731bf188b3af2166">Provider</h2></li>
+
+<li><p>You provide a function;</p></li>
+
+<li><p>Same as service, but you could <strong>access it in module config()</strong>;</p></li>
+</ul>
 
 		</article>
 	</div>
