--- a/tech/angular-factory-vs-service-vs-provider/index.html
+++ b/tech/angular-factory-vs-service-vs-provider/index.html
@@ -46,20 +46,21 @@
 
 <ul>
 <li>You provide a function;</li>
+<li>When used Angular will run the function and <strong>return your function returned value</strong>;</li>
+</ul>
 
-<li><p>When used Angular will run the function and <strong>return your function returned value</strong>;</p>
+<h2 id="service:87649f85a912b186731bf188b3af2166">Service</h2>
 
-<h2 id="service:87649f85a912b186731bf188b3af2166">Service</h2></li>
+<ul>
+<li>You provide a function;</li>
+<li>When used Angular will <strong>return new yourFunction()</strong>;</li>
+</ul>
 
-<li><p>You provide a function;</p></li>
+<h2 id="provider:87649f85a912b186731bf188b3af2166">Provider</h2>
 
-<li><p>When used Angular will <strong>return new yourFunction()</strong>;</p>
-
-<h2 id="provider:87649f85a912b186731bf188b3af2166">Provider</h2></li>
-
-<li><p>You provide a function;</p></li>
-
-<li><p>Same as service, but you could <strong>access it in module config()</strong>;</p></li>
+<ul>
+<li>You provide a function;</li>
+<li>Same as service, but you could <strong>access it in module config()</strong>;</li>
 </ul>
 
 		</article>
