--- a/movies/inkheart-one-of-the-worst-movies-ever/index.html
+++ b/movies/inkheart-one-of-the-worst-movies-ever/index.html
@@ -44,7 +44,7 @@
 
 <p>That stream of possibilities unfortunately led to one of the worst movies ever acted, directed and scripted. Don&rsquo;t waste your time. There is almost no script. I&rsquo;d like to say the character have NO deep at all, but it&rsquo;s even worse than that: The characters and their actions are most of time unrealistic, ilogical and disconnected of the story. The acting is also awful, full of repeated cliches, stereotypes and totaly unconvincing.</p>
 
-<p>What surprises me is that someone at some company authorized investing 60 million bucks to film this. It&rsquo;s unbelievable. I really don&rsquo;t know what they were thinking. Don&rsquo;t you believe me? Please grab a copy, but only if you have pleasure watching crap movies and making satiric comments about it when it&rsquo;s running.</p>
+<p>What surprises me is that someone at some company authorized investing 60 million bucks to film this. It&rsquo;s unbelievable. I really don&rsquo;t know what they were thinking. Don&rsquo;t you believe me? Please grab a copy, but only if you have pleasure watching crap movies and making satiric comments about them when they&rsquo;re running.</p>
 
 		</article>
 	</div>
