--- a/tech/what-is-docker-and-why-is-popular/index.html
+++ b/tech/what-is-docker-and-why-is-popular/index.html
@@ -17,7 +17,9 @@
 		header{width:100%;padding-bottom:10px;background-color:#FFF;}
 		h1{font-size: 2em;}
 		h2{font-size:1.5em;}
-		.wrapper{max-width:1200px;height:auto;position:relative;margin:0 auto;}
+		.wrapper{
+			max-width:1200px;height:auto;position:relative;margin:1em auto;
+		}
 		.title{
 			width: 100%;
 			overflow: hidden;
